# service-alerting-prototype

./: .env.sample  .gitignore  .terraform.lock.hcl  Makefile  README.md  config.sample.yaml  init.sh  main.tf
toy-service/: entrypoint.sh  pyproject.toml
toy-service/src/toyapi/: main.py
