[project]
name = "toyapi"
version = "0.1.0"
authors = [
  { name="Tom Young" },
]
requires-python = ">3.9"
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "click==8.1.*",
    "requests==2.31.*",
    "fastapi==0.100.*",
    "starlette==0.27.*",
    "uvicorn==0.23.*"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
